<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_decs">Lebih mudah untuk mengetahui film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_decs">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="register_new_account">Daftar Akun Baru</string>
    <string name="sign_in_account">Masuk Akun</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Nama</string>
    <string name="email">Email Address</string>
    <string name="later_upload">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="welcom">Welcome, Angga Risky</string>
    <string name="save_and_next">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard">Storyboard</string>
    <string name="who_played">Who\'s Played</string>
    <string name="choose_bench">Pilih Bangku</string>
    <string name="purchase_ticket">Beli Tiket</string>
    <string name="screen">Layar Bioskop</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="checkout">Checkout</string>
    <string name="canceled">Batalkan</string>
    <string name="buy_now">Bayar sekarang</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="seat_no_c1">Seat No C1</string>
    <string name="seat_no_c2">Seat No C2</string>
    <string name="total_amount">Total Harus Dibayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="message_limit_saldo">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="home">Home</string>
    <string name="show_ticket">Lihat Tiket</string>
    <string name="happy_watching">Happy Watching!
    </string>
    <string name="message_success_ticket">Tiket telah berhasil dibeli dan selamat menikmati film</string>
    <string name="save">Simpan data baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_availabel">Saldo Tersedia</string>
    <string name="list_transaction">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="start">Memulai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Todays</string>
    <string name="scan_qr">Scan QR</string>
    <string name="quick_print">Quick Print</string>
</resources>